fix page style to new add page.
no overlapping linear anymore

--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -1,7 +1,7 @@
 
-
 body {
     background: linear-gradient(to bottom right, #1E293B, #334155);
+    background-attachment: fixed;
     margin: 0;
     padding: 0;
     color: white;
